gke_config/k8s/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: users
  name: users-lb
spec:
  type: ClusterIP 
  selector:
    app: users
  ports:
    # - protocol: TCP
      port: 5003
      targetPort: 5003
