gke_config/k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1

# kind: Ingress

# metadata:
#   name: user-app-ingress

# spec:
#   rules: 
#     - http: 
#         paths:
#           - path: /
#             pathType: Prefix
#             backend: 
#               Service: 
#                 name: users
#                 port: 
#                   number: 5003 


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: users
            port:
              number: 60000
      # - path: /v2
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: hello-world-2
      #       port:
      #         number: 80
